# python-tooling

./: .gitignore  README.md  pyproject.toml
.config/: bandit.yml  pylintrc
tests/: test_python_tooling.py
